# master

./: fürFlo  für_Flo
EnergyResponse/: CMakeLists.txt  main.cc
EnergyResponse/include/: UserDefinedActionInitialization.hh  UserDefinedDetectorConstruction.hh  UserDefinedPrimaryGeneratorAction.hh
EnergyResponse/macros/: 662  Dosisaufbauplatte  init_vis.mac  loop  running
EnergyResponse/run662/: run1.mac  run2.mac  run3.mac  run4.mac  run5.mac
EnergyResponse/runC40/: run1.mac  run2.mac  run3.mac  run4.mac  run5.mac
EnergyResponse/runEE/: Zufall.cpp  run1.mac  run2.mac  run3.mac  run4.mac  run5.mac
EnergyResponse/spektren/: C300.txt  C80.txt
EnergyResponse/src/: UserDefinedDetectorConstruction.cc  UserDefinedPrimaryGeneratorAction.cc
Ionisationskammer/662/: CMakeLists.txt  main.cc
Ionisationskammer/662/include/: UserDefinedDetectorConstruction.hh
Ionisationskammer/662/runE662/1000000/: run1.mac  run2.mac  run3.mac
Ionisationskammer/662/runE662/2000000/: run1.mac  run2.mac  run3.mac
Ionisationskammer/662/src/: UserDefinedDetectorConstruction.cc  UserDefinedPrimaryGeneratorAction.cc
Ionisationskammer/Spektrum/: main.cc
Ionisationskammer/Spektrum/include/: UserDefinedPrimaryGeneratorAction.hh
Ionisationskammer/Spektrum/macros/: Zufall.cpp  loop  run
Ionisationskammer/Spektrum/spektren/: C100.txt  C150.txt  C20.txt  C200.txt  C250.txt  C30.txt  C40.txt  C60.txt  Spektren.py  run1.mac
Ionisationskammer/Spektrum/src/: UserDefinedActionInitialization.cc  UserDefinedDetectorConstruction.cc
results/: C100.txt  C150.txt  Luftkerma.xlsx
(+122 files in other folders)
